WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308960
REGRESSION(
308379@main
): Build with assertions disabled is broken
https://bugs.webkit.org/show_bug.cgi?id=308960
Summary
REGRESSION(308379@main): Build with assertions disabled is broken
Vitaly Dyackhov
Reported
2026-03-02 02:19:15 PST
``` In file included from /home/vitaly/WebKit/WebKitBuild/WPE/Release/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-15db4ad9-1.cpp:1: /home/vitaly/WebKit/Source/JavaScriptCore/wasm/WasmAddressType.cpp: In member function 'JSC::Wasm::TypeKind JSC::Wasm::AddressType::asTypeKind() const': /home/vitaly/WebKit/Source/JavaScriptCore/wasm/WasmAddressType.cpp:61:5: error: control reaches end of non-void function [-Werror=return-type] ```
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2026-03-02 02:26:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59700
EWS
Comment 2
2026-03-02 09:57:25 PST
Committed
308469@main
(fe5e9c826dce): <
https://commits.webkit.org/308469@main
> Reviewed commits have been landed. Closing PR #59700 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-02 09:58:12 PST
<
rdar://problem/171538688
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug